Help updated, front from the first page finished except js

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     <a href="#" target="_blank"><img
                             src="assets/images/iconfinder_square-twitter_317723.png"
                             alt="twitter"></a>
-                    <a href="https://github.com/OlivierCharon" target="_blank"><img
+                    <a href="https://github.com/Naayru/Naayru.github.io" target="_blank"><img
                             src="assets/images/iconfinder_github_317712.png"
                             alt="github"></a>
                 </div>
@@ -204,11 +204,10 @@
             
             </div>
             <div class="col-md-5 col-md-push-1" id="footer-2">
-                <h2>Need help?</h2>
-                <p>For help with this or another template you've downloaded from GetTemplate, please email me at
-                    gt@gettemplate.com. </p>
-                <p>If you'd like to report a bug or suggest an improvement, please post and issue on <a
-                        href="https://github.com/pozh/">GitHub</a></p>
+                <h2>Vous avez des questions ?</h2>
+                <p>Notre équipe répondra à vos question à l'adresse suivante: <a href="mailto:oli.charon@gmail.com?subject=Contact DoYouTrust">oli.charon@gmail.com</a> </p>
+                <p>Pour être informé des récents correctifs et suggérer des amélioration au niveau du code, vous pouvez accéder au répertoire <a
+                        href="https://github.com/Naayru/Naayru.github.io" target="_blank">GitHub</a></p>
             </div>
         </div>
     </section>
