--- a/index.html
+++ b/index.html
@@ -210,11 +210,10 @@
             
             </div>
             <div class="col-md-5 col-md-push-1" id="footer-2">
-                <h2>Vous avez des questions ?</h2>
-                <p>Notre équipe répondra à vos question à l'adresse suivante: <a
+                <h2>Tu as des questions ?</h2>
+                <p>Notre équipe répondra à toute tes questions à l'adresse suivante: <a
                         href="mailto:oli.charon@gmail.com?subject=Contact DoYouTrust">oli.charon@gmail.com</a></p>
-                <p>Pour être informé des récents correctifs et suggérer des amélioration au niveau du code, vous pouvez
-                    accéder au répertoire <a
+                <p>Pour être informé des récents correctifs et suggérer des amélioration au niveau du code, rends toi sur ce répertoire <a
                             href="https://github.com/Naayru/Naayru.github.io" target="_blank">GitHub</a></p>
             </div>
         </div>
