form front updated

--- a/index.html
+++ b/index.html
@@ -141,8 +141,7 @@
             <div class="col-md-5 col-md-push-1 col-sm-6">
                 <h2 class="space-before">Les rôles, <span
                         class="text-muted">de 3 à 10 joueurs</span></h2>
-                <p>Dans ce jeu, 3 rôles existent:
-                    <br> <b>Démineur</b>, tout repose sur toi! Tu dois résoudre tous les mécanismes de la bombe, afin de
+                <p> <b>Démineur</b>, tout repose sur toi! Tu dois résoudre tous les mécanismes de la bombe, afin de
                     la désamorcer avant qu'elle n'explose!
                     <br> <b>Allié(s)</b>, tu sais comment désamorcer la bombe, alors aide le démineur dans sa mission!
                     <br> <b>Terroriste(s)</b>, tu sais aussi comment désamorcer la bombe... à toi d'induire discrètement
@@ -193,7 +192,7 @@
         <div class="row">
             <div class="col-md-5 col-md-push-1" id="footer-1">
                 <h2>Intéressé par notre projet ?</h2>
-                <p>N'hésitez pas à en parler à vos amis!</p>
+                <p>N'hésite pas à en parler à tes amis!</p>
                 
                 <div id="rs">
                     <a href="https://www.facebook.com/Do-You-Trust--100341478197437/" target="_blank"><img
