--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-push-2 text-center">
-                <a href="/test.html" ></a>
+                <a href="/test.html" >Blablabla</a>
                 <h1>Do You Trust ?</h1>
                 <h2>Aïl & Fines Herbes Corporation</h2>
                 <p class="lead">
