--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <?php
     require(__DIR__ . "/header.php");
     ?>
-
+<?php
     <!-- Lead -->
     <section class="container space-before space-after">
         <div class="row">
@@ -66,7 +66,7 @@
         -->
     </section>
     <!-- /Features -->
-
+?>
 <?php
     require(__DIR__ . "/footer.php");
 ?>
