--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-<?php
+<!-- <?php
     require(__DIR__ . "/header.php");
-    ?>
+    ?> -->
+<?php include 'header.php';?>
 <?php
     <!-- Lead -->
     <section class="container space-before space-after">
