--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- <?php
     require(__DIR__ . "/header.php");
     ?> -->
-<?php include '/header.php';?>
+<?php include 'header.php';?>
 <?php
     <!-- Lead -->
     <section class="container space-before space-after">
