--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
- <?php
-    //require(__DIR__ . "/header.php");
-      require(header.php);   
- ?> 
+<?php
+    <!-- require(__DIR__ . "/header.php"); -->
+    require(header.php);   
+?> 
+
 <?php
     <!-- Lead -->
     <section class="container space-before space-after">
