--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<?php
-    <!-- require(__DIR__ . "/header.php"); -->
-    require(header.php);   
-?> 
+<head>
+    <link rel="stylesheet" href="css/styles.css">
+
+</head>
 
 <?php
     <!-- Lead -->
@@ -69,6 +69,7 @@
     </section>
     <!-- /Features -->
 ?>
+
 <?php
     require(__DIR__ . "/footer.php");
 ?>
