--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<?php
-    <!-- require(__DIR__ . "/header.html"); -->
-    require(header.php);   
-?> 
+<head>
+    <link rel="stylesheet" href="css/styles.css">
+
+</head>
+
 
 <?php
     <!-- Lead -->
