--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <?php
     <!-- require(__DIR__ . "/header.php"); -->
-    require(header.html);
+    <!-- require(header.html); -->
 ?>
 
     <!-- Lead -->
