--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <?php
-    require(header.html);
+    require('header.html');
 ?>
     <!-- require(__DIR__ . "/header.php"); -->
     <!-- require(header.html); -->
