--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<meta http-equiv="refresh" content="0; URL=index.php">
+
+
+<html>
+
+<head>
+    <meta http-equiv="refresh" content="0; URL=index.php">
+</head>
+     
+</html>
