--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-
-
-<html>
-
 <head>
-    <meta http-equiv="refresh" content="0; URL=index.php">
+    <meta http-equiv="refresh" content="0; URL='/index.php'">
 </head>
-     
-</html>
