--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <head>
-    <meta http-equiv="refresh" content="0; URL='/index.php'">
+    <meta http-equiv="refresh" content="0; URL=index.php" />
 </head>
