--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
-<head>
-    <meta http-equiv="refresh" content="0; URL=index.php" />
-</head>
+<?php
+  header('Location: index.php');
+  exit();
+?>
