--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
 <html>
-  <header>
-    <?php
-      header('Location: index.php');
-    ?>
-  </header>
+    <?php header('Location: index.php'); ?>
 </html>
