--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <html>
-    <?php header('Location: index.php'); exit; ?>
+    <meta>
+        <?php header('Location: index.php'); exit; ?>
+    </meta>
 </html>
