--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <?php
-    include('header.php');
-?>
-    <!-- require(__DIR__ . "/header.php"); -->
-    <!-- require(header.html); -->
+    <!-- include('header.php'); -->
 
+    require(__DIR__ . "/header.php");
+    <!-- require(header.html); -->
+?>
 
 <body>
     <!-- Lead -->
