--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <?php
     <!-- include('header.php'); -->
 
-    require(__DIR__ . "/header.php");
+    <!-- require(__DIR__ . "/header.php"); -->
     <!-- require(header.html); -->
+include("header.php");
 ?>
 
 <body>
